# arithmetical-date-range

./: .pre-commit-config.yaml  README.md  arithmetical_date_range.py  pyproject.toml  test_arithmetical_date_range.py
.github/workflows/: build.yml  publish.yml
