[tool.poetry]
name = "arithmetical-date-range"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
mypy = "^0.902"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--doctest-modules --doctest-glob="*.md"'
